# turnkey-version

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py  turnkey-version  turnkey-version.py
.github/workflows/: lint.yml
debian/: control  copyright  rules
release_notes/: RelNotes-1.1.1.txt
share/: data.json
sysversion/: __init__.py
